--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,11 +4,12 @@ include:
     file: 'artifactory.yml'
 
 build:
-  image: artifacts.mobility.siemens.com/dk_smo_sw-docker-development-local/smo-denmark/commercial-projects/hovedstadens-letbane/clris/artifacts/ipxe
+  image: ubuntu-22.04
   script:
+    - "apt install -y mtools syslinux isolinux libc6-dev-i386 libgcc-s1:i386 libc6-dbg:i386"
     - cd src || exit 1
     - echo "#define DOWNLOAD_PROTO_NFS" >>config/general.h
-    - make bin-x86_64-efi/ipxe.efi EMBED=clris.ipxe
+    - make -j 4 bin-x86_64-efi/ipxe.efi EMBED=clris.ipxe
     - cp bin-x86_64-efi/ipxe.efi ../
   artifacts:
     paths:
