--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@
 build:
   image: artifacts.mobility.siemens.com/dk_smo_sw-docker-development-local/smo-denmark/devops/docker-images/debian:bookworm
   script:
+    - apt update
     - "apt install -y mtools syslinux isolinux libc6-dev-i386 libgcc-s1:i386 libc6-dbg:i386"
     - cd src || exit 1
     - echo "#define DOWNLOAD_PROTO_NFS" >>config/general.h
